tests/ui/abi/cannot-be-coroutine.x64_win.stderr
error: functions with the "x86-interrupt" ABI cannot be `async`
  --> $DIR/cannot-be-coroutine.rs:52:1
   |
LL | async extern "x86-interrupt" fn x86() {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: remove the `async` keyword from this definiton
   |
LL - async extern "x86-interrupt" fn x86() {
LL + extern "x86-interrupt" fn x86() {
   |

error: requires `ResumeTy` lang_item
  --> $DIR/cannot-be-coroutine.rs:32:19
   |
LL |   async fn vanilla(){
   |  ___________________^
LL | |
LL | | }
   | |_^

error: aborting due to 2 previous errors

